--- a/BlazorAppTest/wwwroot/index.html
+++ b/BlazorAppTest/wwwroot/index.html
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-    <app>Loading...</app>
+    <app>Yükleniyor...</app>
 
     <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
+        Beklenmeyen bir hata oluştu
+        <a href="" class="reload">Yeniden Yükle</a>
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
